@@ -1,3 +1,9 @@
+2019-03-11  Mao Han  <han_mao@c-sky.com>
+
+	* sysdeps/unix/sysv/linux/csky/register-dump.h: Adjust offset change.
+	* sysdeps/unix/sysv/linux/csky/sys/ucontext.h: Remove __mask field
+	in mcontext_t
+
 2019-03-08  Mike FABIAN  <mfabian@redhat.com>
 
 	[BZ #24307]
